# kubuntupult-svn

trunk/: ChangeLog  Makefile.in  TODO  katapult.kdevses
trunk/common/: Makefile.in  katapultdisplay.h
trunk/debian/: changelog  control  copyright  docs  lintian
trunk/doc/: Makefile.am
trunk/icons/: hisc-app-katapult.svgz
trunk/katapult/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  confgeneral.ui  configure  configure.in  katapult.cpp  katapult.desktop  katapult.h  katapult.kdevelop.pcs  katapult.kdevses  katapultconfigdlg.cpp  katapultsettings.cpp  katapultsettings.h  subdirs
trunk/katapult-0.3/: TODO  katapult.kdevelop  katapult.kdevelop.pcs
trunk/katapult-0.3/common/: katapultdisplay.desktop
trunk/katapult-0.3/debian/: changelog
trunk/katapult-0.3/debian/patches/: 01_fix_makefile_am.patch  02_fix_desktop_file.patch
trunk/katapult-0.3/katapult/: Makefile.am  Makefile.in  confcatalogs.ui  confdisplay.ui  confgeneral.ui  katapult.cpp  katapult.h
trunk/katapult/autom4te.cache/: output.0  requests  traces.0
trunk/katapult/common/: Makefile.am  Makefile.in  cachedcatalog.cpp  katapultcatalog.cpp  katapultcatalog.desktop  katapultdisplay.cpp  katapultitem.cpp  katapultitem.h
trunk/katapult/debian/: rules
trunk/katapult/doc/: Makefile  Makefile.in
trunk/katapult/doc/en/: Makefile  Makefile.am  Makefile.in  index.docbook
trunk/katapult/katapult/: Makefile.am  Makefile.in  katapult.cpp  katapult.desktop  katapult.h  katapult.lsm  katapultsettings.cpp  main.cpp
trunk/katapult/plugins/: Makefile.in
trunk/katapult/plugins/catalogs/: Makefile.am  Makefile.in
trunk/katapult/plugins/catalogs/programcatalog/: Makefile.am  Makefile.in  settings.ui
trunk/katapult/plugins/display/: Makefile.am  Makefile.in
trunk/katapult/po/: Makefile.in
trunk/original-authors-work/: version.diff
trunk/original-authors-work/katapult-0.3/: ChangeLog  Makefile  Makefile.am  config.h  config.status  katapult.kdevelop  katapult.kdevelop.pcs  libtool
trunk/original-authors-work/katapult-0.3/autom4te.cache/: output.0
trunk/original-authors-work/katapult-0.3/common/: Makefile  Makefile.am  Makefile.in  actioncatalog.cpp  actioncatalog.h  actioncatalog.loT  cachedcatalog.cpp  cachedcatalog.h  cachedcatalog.loT  cachedcatalog.moc.cpp  cachedcatalog.moc.loT  katapultaction.cpp  katapultaction.h  katapultaction.moc.cpp  katapultcatalog.cpp  katapultcatalog.h  katapultcatalog.loT  katapultcatalog.moc.cpp  katapultcatalog.moc.loT  katapultdisplay.cpp  katapultdisplay.h  katapultdisplay.loT  katapultdisplay.moc.cpp  katapultitem.cpp  katapultitem.h  katapultitem.moc.cpp  match.cpp  match.h  status.h
trunk/original-authors-work/katapult-0.3/doc/: Makefile
trunk/plugins/display/: Makefile.in
(+165 files in other folders)
